tests/NormalTests/paczka1/small_fuzzy/16674885.err
Error in line 16: nhfLoKmXKC S239 66,35
